tests/snapshots/test_runner__tests__compiler__typecheck__or_pattern_heterogenous_type_1__or_pattern_heterogenous_type_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
entry
0 .(
  \ 1 | "1" -> true
  //    ^^^ Error: expected Int, got String
)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/or_pattern_heterogenous_type_1/or_pattern_heterogenous_type_1.kk:3:9
  │
3 │   \ 1 | "1" -> true
  │         ^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Int         | + String    |
    +---------------+-------------+
